# CMakeAppTemplate

./: .gitmodules  CMakeLists.txt  readme.md
app/: CMakeLists.txt  main.cpp
tests/: BasicTests.cpp  CMakeLists.txt
